<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".request1.ChangePasswordActivity">

    <ImageButton
        android:id="@+id/back_profile"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:contentDescription="Enter"
        android:background="@color/navy_blue"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <EditText
        android:id="@+id/old_pass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="164dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:hint="@string/old_pass_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/old_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/old_pass"
        android:textColor="@color/white"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_pass" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"
        android:hint="@string/new_pass_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_pass" />

    <TextView
        android:id="@+id/new_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_pass"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/old_pass_text"
        app:layout_constraintTop_toBottomOf="@+id/new_pass" />

    <EditText

        android:id="@+id/confirm_pass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_pass_text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_pass" />

    <TextView
        android:id="@+id/confirm_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_pass"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/old_pass_text"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass" />

    <Button
        android:id="@+id/change"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="@drawable/custom_login_btn"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_text"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>