<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_add"
    android:layout_margin="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/vocabulary"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/bg_blue_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/enter_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_border_grey"
            android:hint="@string/term"
            android:padding="12dp"
            />

        <EditText

            android:id="@+id/enter_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_border_grey"
            android:hint="@string/definition"
            android:padding="12dp"
            />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <Button
                android:id="@+id/cancel_add_btn"
                android:layout_width="0dp"
                android:backgroundTint="@color/grey"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_border_grey"
                android:layout_height="wrap_content"
                android:text="@string/cancel"

                />

            <Button
                android:id="@+id/add_vocab_button"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/navy_blue"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/bg_border_grey"
                android:layout_height="wrap_content"
                android:text="@string/save_add"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>