<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".request1.LoginActivity"
    android:background="@drawable/custom_background">

    <ImageButton
        android:id="@+id/back_login"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:contentDescription="Enter"
        android:background="@color/navy_blue"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/login_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/login_acc"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_login" />

    <EditText
        android:id="@+id/email_phone_login"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:maxLength="100"
        android:hint="@string/email_phone"
        android:textColorHint="@color/grey"

        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_acc" />

    <TextView
        android:id="@+id/email_phone_acc_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_phone_acc"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_phone_login" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:maxLength="100"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="15sp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_phone_acc_login" />

    <TextView
        android:id="@+id/password_acc_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_acc"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_phone_acc_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login"/>
    <Button
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/grey"
        android:text="Log in"
        android:background="@drawable/custom_login_btn"
        android:textAllCaps="false"
        android:textColor="@color/navy_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_acc_login" />

    <TextView
        android:id="@+id/forgot_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_goneMarginTop="10dp" />



</androidx.constraintlayout.widget.ConstraintLayout>